--- a/frontend/styles/OptionDetail.module.css
+++ b/frontend/styles/OptionDetail.module.css
@@ -22,11 +22,11 @@
     display: flex;
     flex-direction: row;
     width: 80%;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .option_detail_card {
-    width: 200px;
+    width: 160px;
     height: 80px;
     padding: 10px;
     background-color: white;
@@ -38,7 +38,11 @@
 }
 
 .option_detail_card_title {
-    font-size: 20px;
+    font-size: 14px;
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.option_detail_card_value {
+    font-size: 12;
 }
