--- a/frontend/styles/OptionDetail.module.css
+++ b/frontend/styles/OptionDetail.module.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     width: 80%;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .option_detail_card {
